# rustcloak-operator

./: .Mk.yaml  .dockerignore  .editorconfig  .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  LICENSE  LICENSE.BSD2  Makefile  README.md  architecture.html  configuration.html  crds.html  index.html  installation.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/actions/rust-build/: action.yaml
.github/workflows/: check.yaml  doc.yaml  release.yaml
charts/rustcloak-operator/: Chart.yaml  README.md  values-minikube.yaml  values.yaml
charts/rustcloak-operator/crds/: clusterkeycloakapiobjects.rustcloak.k8s.eboland.de.yaml  clusterkeycloakinstances.rustcloak.k8s.eboland.de.yaml  clusterkeycloakrealms.rustcloak.k8s.eboland.de.yaml  keycloakapiobjects.rustcloak.k8s.eboland.de.yaml  keycloakauthenticationflows.rustcloak.k8s.eboland.de.yaml  keycloakauthenticatorconfigs.rustcloak.k8s.eboland.de.yaml  keycloakclientcredentials.rustcloak.k8s.eboland.de.yaml  keycloakclients.rustcloak.k8s.eboland.de.yaml  keycloakclientscopes.rustcloak.k8s.eboland.de.yaml  keycloakcomponents.rustcloak.k8s.eboland.de.yaml  (+14 more)
configuration/: legacy-mode.html  patches.html
crds/: clusterkeycloakapiobject.html  clusterkeycloakinstance.html  clusterkeycloakrealm.html  keycloakapiobject.html  keycloakauthenticationflow.html  keycloakauthenticatorconfig.html  keycloakclient.html  keycloakclientcredential.html  keycloakclientscope.html  keycloakcomponent.html  keycloakgroup.html  keycloakidentityprovider.html  keycloakidentityprovidermapper.html  keycloakinstance.html  keycloakorganization.html  keycloakprotocolmapper.html  keycloakrealm.html  keycloakrequiredactionprovider.html  keycloakresource.html  keycloakrole.html  keycloakrolemapping.html  keycloakscope.html  keycloakuser.html  keycloakusercredential.html
dev-scripts/: Dockerfile.release  bootstrap-keycloak.sh  keycloak-instance.yaml
docs/: book.toml
docs/src/: SUMMARY.md  about.md  architecture.md  configuration.md  crds.md  index.md  installation.md  troubleshooting.md
docs/theme/: head.hbs
docs/v/: crds.html  print.html  searchindex.js  searchindex.json
docs/v'0.2'/: architecture.html  print.html
docs/v0.1/: architecture.html  index.html  installation.html  toc.html
docs/v0.2/: 404.html  CNAME  architecture.html  configuration.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/v0.3/: configuration.html  crds.html  print.html  toc.js
docs/v0.4/: 404.html  architecture.html  configuration.html  crds.html  index.html  installation.html  print.html  searcher-c2a407aa.js  searchindex-3613f07d.js  searchindex-db993e52.js  toc-9afecc31.js  toc.html
docs/vversion.workspace = true/: 404.html  architecture.html  configuration.html  crds.html  index.html  installation.html  print.html  searchindex.js  searchindex.json  toc.html
examples/: keycloak-client.yaml  keycloak-instance.yaml  keycloak-realm.yaml  keycloak-user.yaml  keycloak-values.yaml
installation/: quick-start.html
rustcloak-cli/: Cargo.toml
rustcloak-cli/src/: auth.rs  import.rs  main.rs
rustcloak-crd/: Cargo.toml
rustcloak-crd/src/: either.rs  filters.rs  immutable.rs  inner_spec.rs  lib.rs  macros.rs  marker.rs  naming.rs  object.rs  refs.rs  schema.rs  traits.rs  workflow.rs
rustcloak-crd/src/crd/: api_object.rs  client_credentials.rs  instance.rs  mod.rs  options.rs  patches.rs  role_mapping.rs  status.rs  user_credentials.rs
rustcloak-crd/src/crd/representation/: authentication_flow.rs  authenticator_config.rs  client.rs  client_scope.rs  component.rs  group.rs  identity_provider.rs  identity_provider_mapper.rs  mod.rs  organization.rs  protocol_mapper.rs  realm.rs  required_action_provider.rs  resource.rs  role.rs  scope.rs  user.rs
rustcloak-crd/tests/: schema_validation.rs
rustcloak-crd/tests/fixtures/invalid/: client-invalid-field.yaml  instance-invalid-field.yaml  realm-invalid-field.yaml  role-invalid-type.yaml
rustcloak-crd/tests/fixtures/valid/: keycloak-client-scope.yaml  keycloak-client.yaml  keycloak-group.yaml  keycloak-identity-provider.yaml  keycloak-instance.yaml  keycloak-realm.yaml  keycloak-resource.yaml  keycloak-role.yaml  keycloak-scope.yaml  keycloak-user.yaml
rustcloak-operator/: Cargo.toml
rustcloak-operator/src/: error.rs  lib.rs  main.rs  metrics.rs  opts.rs
rustcloak-operator/src/api/: keycloak.rs
rustcloak-operator/src/controller/: api_object_controller.rs  client_credential_controller.rs  client_secret_controller.rs  controller_runner.rs  converter_controller.rs  instance_controller.rs  mod.rs  morph_controller.rs  representation_controller.rs  role_mapping_controller.rs  user_credential_controller.rs  user_secret_controller.rs
rustcloak-operator/src/controller/legacy/: client.rs  instance.rs  mod.rs  realm.rs  user.rs  util.rs
rustcloak-operator/src/endpoint/: query.rs
rustcloak-operator/src/morph/: mod.rs  patcher.rs  traits.rs
rustcloak-operator/src/shim/: mod.rs  refs.rs  resource.rs
rustcloak-operator/src/util/: api.rs  crd_waiter.rs  either2.rs  from_error.rs  json_patcher.rs  k8s.rs  k8s_keycloak.rs  mod.rs  namespace.rs  object_path.rs  ref_watcher.rs  resolve_vars.rs  retrieve.rs  schema.rs  secret.rs  status.rs  to_token.rs
src/: error.rs  lib.rs  opts.rs
src/api/: keycloak.rs
src/controller/: admin_api_controller.rs  admin_session_controller.rs  api_object_controller.rs  client_secret_controller.rs  controller_runner.rs  instance_controller.rs  mod.rs  morph_controller.rs  realm_controller.rs  user_secret_controller.rs
src/crd/: admin_api.rs  admin_session.rs  api_object.rs  client.rs  container_types.rs  instance.rs  mod.rs  patches.rs  realm.rs  refs.rs  status.rs  traits.rs  user.rs
src/crd/endpoint/: mod.rs  (+16 more)
src/endpoint/: endpoint.rs  hierarchy.rs  mod.rs  path.rs  query.rs  retriever.rs
src/morph/: client.rs  mod.rs  patcher.rs  realm.rs  traits.rs  user.rs
src/util/: from_error.rs  job_handler.rs  k8s_keycloak.rs  mod.rs  object_path.rs  ref_watcher.rs  resolve_vars.rs  schema.rs  secret.rs
utils/: Cargo.toml
(+195 files in other folders)
