[workspace]
resolver = "2"
members = ["rustcloak-operator", "rustcloak-crd", "utils"]

[workspace.package]
version = "0.3.2"
authors = [
  "Enno Boland <mail@eboland.de>",
]
repository = "https://github.com/DenktMit-eG/rustcloak-operator"
readme = "README.md"
license = "AGPL-3.0"
edition = "2024"

[workspace.dependencies]
kube = { version = "3.0.0", default-features = false }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
clap = { version = "4.5.54", features = ["derive", "help", "std", "string"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
keycloak-types = { git = "https://github.com/Gottox/keycloak-client.rs" }
#schemars = { version = "0.9.0", features = ["chrono04", "either1"] }
schemars = { version = "1.2.0", features = ["chrono04", "either1"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
