[workspace]
resolver = "2"
members = ["rustcloak-operator", "rustcloak-crd", "utils"]

[workspace.package]
version = "0.4.1"
authors = [
  "Enno Boland <mail@eboland.de>",
]
repository = "https://github.com/DenktMit-eG/rustcloak-operator"
readme = "README.md"
license = "MIT"
edition = "2024"

[workspace.dependencies]
kube = { version = "1.1.0", default-features = false }
k8s-openapi = { version = "0.25.0", features = ["latest", "schemars"] }
clap = { version = "4.5.40", features = ["derive", "help", "std", "string"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
keycloak-types = { git = "https://github.com/Gottox/keycloak-client.rs", rev = "5314c46" }
#schemars = { version = "0.9.0", features = ["chrono04", "either1"] }
schemars = { version = "0.8.22", features = ["chrono", "either"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
