[package]
name = "rustcloak-crd"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license = "BSD-2-Clause"
edition.workspace = true

[dependencies]
kube = { version = "0.99.0", features = ["derive"], default-features = false }
k8s-openapi = { version = "0.24.0", features = ["latest", "schemars"] }
serde = { version = "1.0.219", features = ["derive"] }
schemars = { version = "0.8.22", features = ["chrono", "either"] }
serde_json = "1.0.140"
keycloak-types = { git = "https://github.com/Gottox/keycloak-client.rs" }
#keycloak-types = { path = "../../keycloak-client.rs/keycloak-types" }
either = { version = "1.15.0", features = ["serde"] }
http = { version = "1.3.1", default-features = false }
serde_with = "3.12.0"
