[package]
name = "rustcloak-crd"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license = "BSD-2-Clause"
edition.workspace = true

[dependencies]
kube = { workspace = true, features = ["derive"] }
k8s-openapi = { workspace = true }
serde = { workspace = true }
keycloak-types = { workspace = true }
schemars = { workspace = true }
either = { version = "1.15.0", features = ["serde"] }
http = { version = "1.3.1", default-features = false }
serde_json = "1.0.140"
serde_with = "3.13.0"
convert_case = "0.6"
