[package]
name = "rustcloak-crd"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license = "BSD-2-Clause"
edition.workspace = true

[dependencies]
kube = { workspace = true, features = ["derive"] }
k8s-openapi = { workspace = true }
serde = { workspace = true }
keycloak-types = { workspace = true }
schemars = { workspace = true }
either = { version = "1.15.0", features = ["serde"] }
http = { version = "1.4.0", default-features = false }
serde_json = "1.0.149"
serde_with = "3.16.1"

[dev-dependencies]
serde_yaml = "0.9"
jsonschema = { version = "0.29", default-features = false }
