[package]
name = "rustcloak-operator"
version = "0.2.0"
edition = "2024"

[dependencies]
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest", "schemars"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread", "sync"] }
clap = { version = "4.5.31", features = ["derive", "help", "std", "string"], default-features = false }
serde = "1.0.219"
thiserror = "2.0.12"
log = { version = "0.4.26", features = ["kv"] }
futures = { version = "0.3.31", default-features = false }
async-trait = "0.1.87"
serde_yaml = "0.9.34"
pretty_env_logger = "0.5.0"
chrono = { version = "0.4.40", features = ["serde"], default-features = false }
derive_builder = "0.20.2"
actix-web = { version = "4.9.0", default-features = false, features = ["http2", "macros"] }
either = { version = "1.15.0", features = ["serde"] }
keycloak-crd = { git = "https://github.com/withlazers/keycloak-crd.git", branch = "rustcloak" }
randstr = { git = "https://github.com/Gottox/randstr", branch = "main" }
structured-logger = "1.0.3"
case_style = "0.2.1"
rustcloak-crd = { path = "../rustcloak-crd" }
keycloak-client = { git = "https://github.com/Gottox/keycloak-client.rs" }
#keycloak-client = { path = "../../keycloak-client.rs/keycloak-client" }
shorter-bounds = "0.1.1"
