[package]
name = "rustcloak-operator"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
kube = { version = "1.0.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest", "schemars"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync"] }
clap = { version = "4.5.38", features = ["derive", "help", "std", "string"], default-features = false }
serde = "1.0.219"
thiserror = "2.0.12"
log = { version = "0.4.27", features = ["kv"] }
futures = { version = "0.3.31", default-features = false }
async-trait = "0.1.88"
serde_yaml = "0.9.34"
pretty_env_logger = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"], default-features = false }
derive_builder = "0.20.2"
actix-web = { version = "4.11.0", default-features = false, features = ["http2", "macros"] }
either = { version = "1.15.0", features = ["serde"] }
keycloak-crd = { git = "https://github.com/withlazers/keycloak-crd.git", branch = "rustcloak" }
randstr = { git = "https://github.com/Gottox/randstr", branch = "main" }
structured-logger = "1.0.4"
case_style = "0.2.1"
rustcloak-crd = { path = "../rustcloak-crd" }
keycloak-client = { git = "https://github.com/Gottox/keycloak-client.rs" }
#keycloak-client = { path = "../../keycloak-client.rs/keycloak-client" }
shorter-bounds = "0.1.1"
prometheus = { version = "0.14.0", default-features = false }
jsonpath-rust = "1.0.2"
urlencoding = "2.1.3"
