[package]
name = "rustcloak-operator"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
kube = { workspace = true, features = ["derive", "runtime", "client", "rustls-tls", "ring"] }
k8s-openapi = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }

thiserror = "2.0.12"
log = { version = "0.4.27", features = ["kv"] }
futures = { version = "0.3.31", default-features = false }
async-trait = "0.1.88"
serde_yaml = "0.9.34"
pretty_env_logger = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"], default-features = false }
axum = { version = "0.7", features = ["json"] }
either = { version = "1.15.0", features = ["serde"] }
keycloak-crd = { git = "https://github.com/withlazers/keycloak-crd.git", branch = "rustcloak" }
randstr = { git = "https://github.com/Gottox/randstr", branch = "main" }
structured-logger = "1.0.4"
heck = "0.5"
rustcloak-crd = { path = "../rustcloak-crd" }
keycloak-client = { git = "https://github.com/Gottox/keycloak-client.rs", rev = "5314c46" }
#keycloak-client = { path = "../../keycloak-client.rs/keycloak-client" }
shorter-bounds = "0.1.1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
jsonpath-rust = "1.0.2"
urlencoding = "2.1.3"
kube-runtime = "1.1.0"
kube-client = "1.1.0"
