[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
rustcloak-crd = { path = "../rustcloak-crd" }
serde_yaml = "0.9.34"
crd2md = { git = "https://github.com/withlazers/crd2md.git" }
#crd2md = { path = "../../crd2md/crd2md" }
clap = { version = "4.5.30", features = ["derive", "help", "std"], default-features = false }
kube = { version = "0.98.0", features = ["derive"], default-features = false }
