[package]
name = "utils"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
rustcloak-crd = { path = "../rustcloak-crd" }
serde_yaml = "0.9.34"
crd2md = { git = "https://github.com/withlazers/crd2md.git" }
#crd2md = { path = "../../crd2md/crd2md" }
clap = { version = "4.5.38", features = ["derive", "help", "std"], default-features = false }
kube = { version = "1.0.0", features = ["derive"], default-features = false }
