[package]
name = "utils"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
rustcloak-crd = { path = "../rustcloak-crd" }
serde_yaml = "0.9.34"
crd2md = { git = "https://github.com/withlazers/crd2md.git" }
kube = { version = "1.1.0", default-features = false }
